--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Tortoiseshell Optics</title>
-    <link href="resources/css/reset.css" style="text/css" rel="stylesheet">
-    <link href="resources/css/style.css" style="text/css" rel="stylesheet">
+    <link href="resources/reset.css" style="text/css" rel="stylesheet">
+    <link href="resources/style.css" style="text/css" rel="stylesheet">
+    <!--<link href="resources/css/reset.css" style="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" style="text/css" rel="stylesheet">-->
   </head>
 
   <body>
