--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <div class="header">
         <div class="header-box">
           <img class="logo" src="resources/images/logo-white.png">
-          
           <span class="logo-p">Tortoiseshell Optics</span>
         </div>
 
@@ -38,7 +37,7 @@
     </div>
 
     <!--three-->
-    <div class="container">
+    <div class="container three-container">
       <div class="three">
 
         <!--sub-div img-one-->
